# token-distillation

./: .gitignore  CITATION.bib  README.md  example.py  pyproject.toml
paper/: README.md  ahocorasick.py  apply_embedding_init.py  clm.py  pyproject.toml  token_distillation.py  token_distillation_utils.py
paper/llm_as_a_judge_evals/prompt_templates/: correctness_llama_3_1_70b_instruct_no_fewshot.py  similarity_llama_3_1_70b_instruct_no_fewshot.py
paper/new_tokens/: combined_all_medical_word_counts.jsonl  concepts.json
paper/zett/: transfer.py  utils.py
token_distillation/: pyproject.toml
token_distillation/token_distillation/: __init__.py  ahocorasick.py  tokdist.py  train_loop.py  utils.py
