[project]
name = "token_distillation_paper"
version = "1.0.0"
description = "Awesome embedding initialization."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets<4.0.0",
    "numpy>=1.26.3",
    "tqdm>=4.64.1",
    "transformers>=4.41.2",
    "fire>=0.6.0",
    "ahocorasick-rs>=0.22.0",
    "torch>=2.3.1",
    "sentencepiece>=0.2.0",
    "protobuf>=5.27.0",
    "accelerate>=0.30.1",
    "jaxtyping>=0.2.29",
    "matplotlib>=3.9.0",
    "setuptools>=70.0.0",
    "lm-eval>=0.4.2",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "ipywidgets>=8.1.5",
    "wandb>=0.19.4",
    "huggingface-hub[cli]>=0.28.1",
    "typer>=0.15.1",
    "composer>=0.28.0",
    "omegaconf>=2.3.0",
    "pycountry>=24.6.1",
    "deepfocus>=1.0.1",
    "tokenizerchanger>=1.0.1",
    "vllm>0.9.0",
    "flax>=0.10.4",
    "optax>=0.2.4",
    "maturin>=1.8.3",
    "pandas>=2.2.3",
    "jax[cuda12]>=0.5.3; sys_platform == 'linux'",
    "jaxlib>=0.5.3; sys_platform == 'linux'",
]

[tool.uv]
# environments = ["sys_platform == 'linux'"]  # force linux if cross-building

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux'" }]


[tool.ruff]
line-length = 128
